# postgres-stream

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml  justfile  rustfmt.toml  taplo.toml
.cargo/: config.toml
.github/workflows/: publish.yml  pull_request.yml  release.yml
configuration/: base.yml
migrations/: 1765364029646_init.sql  1766831075000_add_lsn.sql  1767183702000_lsn_to_text.sql
plans/: recovery.md
src/: core.rs  failover_client.rs  lib.rs  main.rs  maintenance.rs  migrations.rs  recovery.rs  replay_client.rs  store.rs  stream.rs  subscriptions.rs
src/concurrency/: stream.rs
src/config/: load.rs  mod.rs  pipeline.rs  schema.rs  sink.rs  stream.rs
src/metrics/: failover.rs  jemalloc.rs  maintenance.rs  mod.rs  prometheus.rs  stream.rs
src/queries/: events.rs  mod.rs  partitions.rs  schema.rs  stream.rs
src/sink/: base.rs  memory.rs  mod.rs
src/test_utils/: container.rs  database.rs  failable_sink.rs  helpers.rs  mod.rs  schema.rs  test_lock.rs
src/types/: event.rs  mod.rs  stream.rs
src/utils/: mod.rs  task.rs  tokio.rs
tests/: failover_client_tests.rs  maintenance_tests.rs  replay_client_tests.rs  slot_recovery_tests.rs  store_tests.rs  stream_tests.rs  subscriptions_tests.rs
