[package]
edition = "2024"
name    = "postgres-stream"
version = "0.1.0"

[features]
default    = []
test-utils = ["dep:testcontainers", "dep:testcontainers-modules"]

[dependencies]
anyhow = { version = "1.0.98", default-features = false, features = ["std"] }
chrono = { version = "0.4.41", default-features = false }
config = { version = "0.14", default-features = false, features = ["yaml", "json"] }
const-oid = { version = "0.9.6", default-features = false }
futures = { version = "0.3.31", default-features = false }
metrics = { version = "0.24.2", default-features = false }
metrics-exporter-prometheus = { version = "0.17.2", default-features = false, features = ["http-listener"] }
pin-project-lite = { version = "0.2.16", default-features = false }
ring = { version = "0.17.14", default-features = false }
rustls = { version = "0.23.31", default-features = false }
rustls-pemfile = { version = "2.2.0", default-features = false, features = ["std"] }
secrecy = { version = "0.10.3", default-features = false, features = ["serde"] }
serde = { version = "1.0.219", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0.141", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
sqlx = { version = "0.8.6", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
] }
thiserror = { version = "2.0", default-features = false }
tokio = { version = "1.47.0", default-features = false, features = ["rt-multi-thread", "macros", "signal"] }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", default-features = false, rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b", features = [
  "runtime",
  "with-chrono-0_4",
  "with-uuid-1",
  "with-serde_json-1",
] }
tokio-rustls = { version = "0.26.2", default-features = false }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }
x509-cert = { version = "0.2.2", default-features = false }

etl          = { git = "https://github.com/psteinroe/etl", rev = "f5ceaf6c1a2a961c70250396912536fef6bb6d7d" }
etl-postgres = { git = "https://github.com/psteinroe/etl", rev = "f5ceaf6c1a2a961c70250396912536fef6bb6d7d" }
uuid         = { version = "1.19.0", default-features = false, features = ["v4"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemalloc-ctl = { version = "0.6.0", default-features = false, features = ["stats"] }
tikv-jemallocator = { version = "0.6.1", default-features = false, features = [
  "background_threads_runtime_support",
  "unprefixed_malloc_on_supported_platforms",
] }


testcontainers         = { version = "0.23", optional = true }
testcontainers-modules = { version = "0.11", optional = true, features = ["postgres"] }

[dev-dependencies]
temp-env = "0.3"
tempfile = "3.13"

[lints.clippy]
fallible_impl_from        = "deny"
fn_params_excessive_bools = "deny"
indexing_slicing          = "deny"
must_use_candidate        = "deny"
unneeded_field_pattern    = "deny"
wildcard_enum_match_arm   = "deny"
